<resources>
    <string name="app_name">TeamManager</string>
    <string name="inici">Login</string>
    <string name="nom">User name: </string>
    <string name="contrasenya">Password: </string>
    <string name="contrasenya2">Rewrite your password</string>
    <string name="log">ENTER</string>
    <string name="reg">SIGN UP</string>

    <string name="remPass">I don\'t remember my password</string>
    <string name="implement">The activity must implement the interface OnButtonsFragmentListener</string>
    <string name="wrong">Wrong user o password</string>
    <string name="noUser">You must write a user and a password</string>
    <string name="logged">User logged in correctly</string>
    <string name="Registration">Sign Up!</string>
    <string name="thanks">Thank you for Signing Up!!! :)</string>
    <string name="regCorrect">User signed up correctly</string>
    <string name="ErrorPass">The passwords are not teh same</string>
    <string name="errorReg">There was an error when registering the user</string>
    <string name="send">An email has been send for you to reset your password</string>
    <string name="enviar">Send</string>
    <string name="paragraf">Write the email address to which you want to send the email to reset the password.</string>
    <string name="rem">Remember password</string>
    <string name="error">Error sending mail</string>
    <string name="wmail">You have to write an email</string>


    <string name="settings">Settings</string>
    <string name="events">Events</string>
    <string name="equip">Team</string>
    <string name="gal">Gallery</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="infoP">Last Match info:</string>
    <string name="result">1 - 1</string>
    <string name="pevents">The next 3 events: </string>
    <string name="entrene">Training</string>
    <string name="evFragment">EVENTS INFORMATION</string>
    <string name="btnEvents">ADD</string>
    <string name="editEvents">EDIT</string>
    <string name="partit">Match</string>
    <string name="add">ADD</string>
    <string name="denegat">Permission denied, no access to the gallery.</string>
    <string name="donat">Permission granted, opening the gallery</string>
    <string name="nat">Natalia</string>
    <string name="cont">12345</string>
    <string name="rol">Trainer</string>
    <string name="noti">Notifications</string>
    <string name="delete">DELETE ACOUNT</string>
    <string name="logOut">Logging out...</string>
    <string name="dark_mode">Dark mode</string>
    <string name="mc">CM</string>
    <string name="dc">ST</string>
    <string name="gk">GK</string>
    <string name="dfc">DFC</string>
    <string name="lb">LB</string>
    <string name="working">WE\'RE WORKING ON THIS FUNCIONALITY, SORRY</string>
    <string name="wuser">The User or password are wrong, try again</string>
    <string name="del">DELETING ACOUNT....</string>
    <string name="back">CLOSE SESSION</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>