<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="131dp"
        android:src="@drawable/alexia"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="101dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rol"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="166dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="428dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="248dp" />
</androidx.constraintlayout.widget.ConstraintLayout>